# xcc-project

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.bak  Makefile~  README.md  build.properties  build.sh  build.xml  designator2.c  dragonegg-3.0.tar.xz  phases-2.6.txt  phases.txt  rename.sh
c++/: CMakeLists.txt  Jlang.cpp  NativeLauncher.cpp  NativeLauncher.h  TableGen.cpp
cmake/: GetHostTriple.cmake  addXCC.cmake  config-ix.cmake
config/: Config.java.in  TargetSelect.java.in  Targets.java.in  version.h  version.h.in
cpp/: CMakeLists.txt  FileCheck.cpp  GetCpuIDAndInfo.cpp  Jlang.cpp  JlangCC.cpp  NativeLauncher.cpp  NativeLauncher.h  Opt.cpp  TableGen.cpp  count.c  llc.cpp  llvm-checker.cpp  not.cpp  xcc-cc.cpp  xcc.cpp
document/cc/: Main.html
dragonegg-3.0/: Makefile  Notes
dragonegg-3.0/src/: Backend.cpp  Convert.cpp  DefaultABI.cpp
java/cfe/: package-info.java
java/driver/: Action.java  Arg.java  ArgList.java  Compilation.java  DerivedArgList.java  DiagnosticJlangDriverKinds.java  DiagnosticJlangDriverTag.java  Driver.java  GenericGCCToolChain.java  InputArgList.java  InputInfo.java  InputType.java  LinuxToolChain.java  Option.java  OptionClass.java  ToolChain.java  TypeID.java  XCC.java  XCCFlags.java
java/jlang/: package-info.java
java/tablegen/: CodeGenIntrinsic.java  CodeGenRegisterClass.java  MultiClass.java  PatternToMatch.java  RecTy.java  RegisterInfoEmitter.java  SDNP.java  SetMultiMap.java  TGParser.java  TableGenBackend.java
java/test/: CMakeLists.txt  lit.site.cfg.in
java/tools/: APFloat.java  APInt.java  APSInt.java  BitMap.java  BitMap2D.java  BitSet2D.java  CPUInfoUtility.java  ColorCode.java  Colors.java  CommandUtils.java  CompilerException.java  Convert.java  Error.java  FltSemantics.java  FoldingSetNode.java  FoldingSetNodeID.java  FormattedOutputStream.java  IntList.java  LayoutCharacters.java  ListUtils.java  LogStream.java  LostFraction.java  Name.java  NullOutputStream.java  NumUtil.java  OSInfo.java  Options.java  OutParamWrapper.java  OutRef.java  Pair.java  Platform.java  PrintStackTraceProgram.java  SMDiagnostic.java  SetMultiMap.java  SourceMgr.java  TTY.java  TextUtils.java  TypeMap.java  Util.java  decimalInfo.java
java/xcc/: Action.java  Arg.java  ArgList.java  Compilation.java  DerivedArgList.java  DiagnosticJlangDriverKinds.java  DiagnosticJlangDriverTag.java  Driver.java  GenericGCCToolChain.java  HostInfo.java  InputArgList.java  InputInfo.java  InputType.java  Jlang.java  JlangFlags.java  Job.java  LinuxToolChain.java  Main.java  OptParser.td  OptTable.java  Option.java  OptionClass.java  Options.td  ToolChain.java  TypeID.java
src/asm/: AbstractAssembler.java  AsmOptions.java  Buffer.java  Label.java
src/ast/: ASTConsumer.java  ASTVisitor.java  AstVisitor.java  CastKind.java  Factory.java  Flags.java  IASTVisitor.java  IStmtVisitor.java  Pretty.java  StmtVisitor.java  Tree.java  TreeInfo.java  TreeMaker.java
src/backend/: DomTreeNodeBase.java  RegisterConfig.java  Target.java  TargetMachine.java
src/cc/: Main.java
src/ci/: CiAddress.java  CiConstant.java  CiKind.java  CiRegister.java  CiRegisterValue.java  CiStackSlot.java  CiValue.java  CiVariable.java
src/comp/: Attr.java  AttrContext.java  AttrContextEnv.java  Check.java  ConstFold.java  Enter.java  Env.java  Infer.java  OpCodes.java  Resolve.java  Symtab.java  Todo.java
src/compiler/: Backend.java  Compiler.java  CompilerMode.java  Frontend.java  IA32Backend.java  Main.java  Optimizer.java  Options.java  SourceFile.java
src/cparser/: ActionResult.java  DeclContext.java  DeclKind.java  DeclSpec.java  Declarator.java  EncodeChar.java  Keywords.java  Parser.java  Scanner.java  Tag.java  Token.java
src/dataflow/: Flow.java
src/driver/: Backend.java  BackendAction.java  CompileInterface.java  CompileOptions.java  Compiler.java  CompilerInstance.java  CompilerMode.java  CustomOption.java  CustomParser.java  Frontend.java  IA32Backend.java  Main.java  Optimizer.java  Options.java  ProgramAction.java  SourceFile.java
src/exception/: CiBailout.java  CompileException.java  CompletionFailure.java  FileException.java  IPCException.java  JumpError.java  MemoryPromoteError.java  OptionParseError.java  SemanticError.java  SemanticException.java  SyntaxException.java
src/heap/: HeapManager.java
src/hir/: ASTToQuad.java  Argument.java  BackwardIterator.java  BasicBlock.java  BasicBlockVisitor.java  CodeGenFunction.java  ComputeLinearScanOrder.java  Condition.java  ConstantBool.java  ConstantInt.java  ConstantInteger.java  ControlFlowGraph.java  ControlFlowGraphVisitor.java  CriticalEdgeFinder.java  DominatorTree.java  EnterSSA.java  Function.java  GlobalValue.java  GlobalVariable.java  HIR.java  HIRGenModule.java  HIRGenerator.java  IndexGenerator.java  Instruction.java  InstructionVisitor.java  LHS.java  Method.java  Module.java  ModuleBuilder.java  Operand.java  Operator.java  PredIterator.java  PromoteMem2Reg.java  Quad.java  QuadVisitor.java  RHS.java  RegisterFactory.java  Signature.java  StackSlot.java  Statistics.java  (+11 more)
src/lir/: CodeBlob.java  CompilerStub.java  FrameMap.java  LIR.java  LIRAssembler.java  LIRBlock.java  (+20 more)
tds/: Intrinsics.td  SDNodeProperties.td  Target.td  TargetSchedule.td  TargetSelectionDAG.td  ValueType.td
test/: 2017-8-23-function-pointer.c  Target.td  TargetCallingConv.td  ValueType.td
test/mediabench4/rasta/src/: .bc  INSTALL  README  config.h.in  config.h.old  config.status  config.sub  configure.in  debug.c  ex1_10.asc  ex5.asc  fft.c  functions.h  fvecsubs.c  init.c  inverse_nl.c  lpccep.c  nl_audspec.c  noise_est.c  rasta.c  rasta.stats  rasta_filt.c  values.h
test/mediabench4/rasta/src/sphere2/: sphere_2.6a.tar
test/mediabench4/rasta/src/sphere2/nist/: readme.doc
test/mediabench4/rasta/src/sphere2/nist/lib/makes/: make_lib.txt  make_prg.txt  make_spg.txt
test/mediabench4/rasta/src/sphere2/nist/src/lib/sp/: exit.c  sphere.c  spopen.c  spoutput.c  spwrite.c  wavpack.c
test/mediabench4/rasta/src/sphere2/nist/src/scripts/: Makefile  gen_setv.sh  install.sh
xcc/: CMakeLists.txt  README.md
(+4362 files in other folders)
